Assign chirality-sensitive protein atom names.
DESRESFF#642

Change-Id: Id7ab897e0a50bad664e13637257833622647379a

--- a/src/SConscript
+++ b/src/SConscript
@@ -66,6 +66,7 @@ postprocess/apply_nbfix.cxx
 postprocess/build_constraints.cxx
 postprocess/compile_plugins.cxx
 postprocess/fix_masses.cxx
+postprocess/prochirality.cxx
 
 util/get_bonds_angles_dihedrals.cxx
 util/system_to_dot.cxx
