--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "enscons.api"
 
 [tool.enscons]
 name="viparr"
-version="4.7.20"
+version="4.7.34"
 packages=["viparr"]
 install_requires=["wheel"]
 description="Viparr - for forcefields"
@@ -12,6 +12,8 @@ description="Viparr - for forcefields"
 license="BSD-3"
 classifiers=[
   "Programming Language :: Python :: 3.6",
+  "Programming Language :: Python :: 3.7",
+  "Programming Language :: Python :: 3.8",
 ]
 keywords=["packaging", "wheel"]
 author="DESRES"
